[package]
name = "racing-recorder-ws-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
serde = {version = "=1.0.215", features = ["derive"]}
serde_json = "1.0"
racing-recorder-lib = {path = "../racing-recorder-lib"}